# mypy-plugins-examples

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/pure/: README.md  invalid.py  valid.py
examples/raise/: README.md  invalid.py  valid.py
